# jwlegit

./: README.md  pyproject.toml
src/jwlegit/: cli.py  models.py  report.py
src/jwlegit/services/: abuseipdb.py  rdap.py  safebrowsing.py  ssllabs.py  urlscan.py  virustotal.py
