[project]
name = "jwlegit"
version = "0.1.0"
description = "URL reputation checker — queries urlscan.io, VirusTotal, and SSL Labs in parallel"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
jwlegit = "jwlegit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jwlegit"]
